--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   dio: ^5.4.3+1
   crypto: ^3.0.3
   intl: ^0.19.0
+  admob_flutter: ^3.0.0
+  firebase_core: ^2.4.1
 
 dev_dependencies:
   flutter_test:
