--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,6 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_screenutil: ^5.9.3
   json_serializable: ^6.7.1
@@ -44,12 +41,14 @@ dependencies:
   intl: ^0.19.0
   # admob_flutter: ^3.0.0
   firebase_core: ^2.4.1
+  auto_route: ^8.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.4.11
   iconfont_builder2: ^1.0.6
+  auto_route_generator: ^8.0.0
 
   intl_utils: null
 
