--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,7 @@ dependencies:
   crypto: ^3.0.3
   intl: ^0.19.0
   # admob_flutter: ^3.0.0
-  firebase_core: ^2.4.1
-  auto_route: ^8.2.0
-  provider: ^6.1.2
+  # firebase_core: ^2.4.1
 
 dev_dependencies:
   flutter_test:
