--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   dio: ^5.4.3+1
   crypto: ^3.0.3
   intl: ^0.19.0
-  firebase_core: ^2.4.1
+  # firebase_core: ^2.4.1
   auto_route: ^8.2.0
   provider: ^6.1.2
 
