--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
   assets:
     - assets/
     - assets/img/
+    - assets/icon/
     - assets/fonts/iconfonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
