--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,10 @@ dependencies:
   dio: ^5.4.3+1
   crypto: ^3.0.3
   intl: ^0.19.0
-  # firebase_core: ^2.4.1
+  firebase_core: ^3.1.1
   auto_route: ^8.2.0
   provider: ^6.1.2
+  firebase_auth: ^5.1.1
 
 dev_dependencies:
   flutter_test:
