--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   auto_route: ^8.2.0
   provider: ^6.1.2
   firebase_auth: ^5.1.1
+  google_sign_in: ^5.2.4
+  sign_in_with_apple: ^4.0.0
 
 dev_dependencies:
   flutter_test:
