--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_auth: ^5.1.1
   google_sign_in: ^5.2.4
   sign_in_with_apple: ^4.0.0
+  otp_text_field: ^1.1.3
 
 dev_dependencies:
   flutter_test:
