--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>145080085678-tv9ukl5t9lodvoebr12tg4l346jm9i7f.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.145080085678-tv9ukl5t9lodvoebr12tg4l346jm9i7f</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBa4OOOmHgusChdnnQJGVx0MM9jrgvq6zE</string>
 	<key>GCM_SENDER_ID</key>
