--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   google_sign_in: ^5.2.4
   sign_in_with_apple: ^4.0.0
   otp_text_field: ^1.1.3
+  firebase_analytics: ^11.2.0
+  firebase_crashlytics: ^4.0.3
 
 dev_dependencies:
   flutter_test:
