--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   otp_text_field: ^1.1.3
   firebase_analytics: ^11.2.0
   firebase_crashlytics: ^4.0.3
+  firebase_storage: ^12.1.1
 
 dev_dependencies:
   flutter_test:
