--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,14 +47,8 @@ dependencies:
   sign_in_with_apple: ^4.0.0
   otp_text_field: ^1.1.3
   firebase_crashlytics: ^4.0.3
-  tencent_cloud_chat: ^1.4.1
-  tencent_cloud_chat_conversation: ^1.4.1
-  tencent_cloud_chat_message: ^1.4.1
-  package_info_plus: ^8.0.0
+  tencent_cloud_chat_uikit: ^2.6.0+2
 
-
-dependency_overrides:
-  package_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
