refactor: 重构项目并添加 Firebase 支持
- 更新 .gitignore 文件，排除 ios/build 目录
- 在 android/app/google-services.json 中添加 firebase_url
- 更新 ios/Podfile.lock，添加 Firebase 依赖
- 在 ios/Runner.xcodeproj/project.pbxproj 中调整构建阶段
- 更新 ios/Runner/GoogleService-Info.plist，添加 DATABASE_URL
- 修改 lib/common/config/global.dart，更新 API 基础 URL
- 调整 lib/common/utils/http.dart 中的 HTTP 请求实现
- 更新 lib/firebase_options.dart，添加数据库 URL 配置
- 在 lib/main.dart 中添加 Firebase 初始化代码
- 修改 lib/pages 中的页面实现，注释掉与 Firebase 相关的代码
- 更新 lib/respository 中的 UserRespository 和 VehicleRespository，支持 Firebase 数据库
- 调整 lib/routes/auth_guard.dart 中的认证逻辑
- 更新 macos/Flutter/GeneratedPluginRegistrant.swift，注册 Firebase 插件

--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -30,6 +30,8 @@
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:145080085678:ios:8d5e6619b0dba54422513f</string>
+	<key>DATABASE_URL</key>
+	<string>https://codery-4853e-default-rtdb.asia-southeast1.firebasedatabase.app</string>
 	<key>ADMOB_APP_ID</key>
 	<string>ca-app-pub-7472590920742255~2331390844</string>
 </dict>
