--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,9 +43,10 @@ dependencies:
   auto_route: ^8.2.0
   provider: ^6.1.2
   # firebase_auth: ^5.1.1
-  google_sign_in: ^5.2.4
-  sign_in_with_apple: ^4.0.0
+  # google_sign_in: ^5.2.4
+  # sign_in_with_apple: ^4.0.0
   otp_text_field: ^1.1.3
+  firebase_core: ^3.4.0
   # firebase_crashlytics: ^4.0.3
   # tencent_cloud_chat_uikit: ^2.6.0+2
 
